# corp-knowledge-extractor

./: .env.example  .gitignore  CLAUDE.md  README.md  eval_extraction.py  golden_set.txt  pyproject.toml  requirements.txt
_outputs/: README.md  inventory.md
config/: config_loader.py  settings.yaml  taxonomy.yaml  taxonomy_review.yaml
scripts/: compress_video.py  run.py
src/: batch.py  batch_api.py  compress.py  correlate.py  correlate_sessions.py  deep_prompt.py  doc_type_classifier.py  extract.py  fact_validation.py  freshness.py  inventory.py  manifest.py  merge_session.py  polarity.py  post_process.py  reextract.py  scan.py  synthesize.py  taxonomy_prompt.py  text_extract.py  tier_router.py  transcript.py  utils.py
tasks/: lessons.md  todo.md
templates/: extract.md.j2  index.md.j2  meta.yaml.j2
tests/: test_api_keys.py  test_batch_api.py  test_batch_slides.py  test_comparison.py  test_config.py  test_correlate.py  test_correlate_sessions.py  test_deep_prompt.py  test_doc_type_classifier.py  test_eval_scoring.py  test_extraction_cost.py  test_fact_validation.py  test_file_link.py  test_force_flag.py  test_freshness.py  test_haiku_enrichment.py  test_inventory.py  test_locator.py  test_manifest.py  test_merge_session.py  test_meta_cover.py  test_model_escalation.py  test_model_flag.py  test_normalize_string_list.py  test_output_filename.py  test_pdf_converter.py  test_pdf_multimodal.py  test_polarity.py  test_polarity_extended.py  test_post_process.py  test_provenance.py  test_providers.py  test_quality.py  test_quality_score.py  test_resume.py  test_scan.py  (+16 more)
(+27 files in other folders)
